"Fix ghostmatyr on IE" Rohansi@e9fdd44

--- a/Web/css/_names.less
+++ b/Web/css/_names.less
@@ -51,12 +51,6 @@
 		display: inline-block;
 	}
 
-	// Blurry
-	.blur {
-		color: transparent;
-		text-shadow: 0 0 0.5em @colWeb, 0 0 0.25em @colWeb, 0 0 0.1em darken( @colWeb, 15% );
-	}
-
 	// Red (Krix)
 	.red {
 		color: #dc2832;
@@ -76,8 +70,8 @@
 
 	// All spooky n shit. (Farmatyr)
 	.ghostmatyr {
-		color: transparent;
-		text-shadow: #add8e6 0 0 1px;
+		color: rgb(129, 162, 172);
+		text-shadow: rgb(129, 162, 172) 0 0 2px;
 		transform: rotate(3deg);
 		display: inline-block;
 	}
